opam-version: "2.0"
version: "1.2.0"
authors: "Arjun Guha et al"
maintainer: "Arjun Guha <arjun@cs.umass.edu>"
homepage: "https://github.com/priyasrikumar/ocaml-z3"
bug-reports: "Arjun Guha <arjun@cs.umass.edu>"
synopsis: "Z3 wrapper"
build: [
  ["dune" "build" "--root" "." "--profile" "release" "@install"]
]
depends: [
  "bignum"         
  "dune" {build & >= "2.0"}
]